# german-load-forecasting-mlops

./: .dockerignore  .env.example  .gitignore  DEV-AUTH-ROADMAP.md  DEV-GATEWAY.md  DEV-README.md  Makefile  README.md  dev-history.md  docker-compose.debug.yml  docker-compose.yml  dvc.yaml  pyproject.toml  to-do.md
.dvc/: config
.github/workflows/: ci.yml
airflow/dags/: load_forecast_training_pipeline.py
configs/: __init__.py  config.yml  config_api.py  config_auth.py  config_logs.py  config_paths.py  config_runtime.py  config_sql.py  config_trains.py  config_utils.py  main.py
configs/inputs/: api.yml  auth.yml  logging.yml  paths.yml  sql.yml  training.yml
core/: config.py  log_utils.py  sql_helpers.py
data/: .gitignore
data/raw/: .gitignore  database.db.dvc  time_series-2020-10-06.csv.dvc
deployment/grafana/dashboards/: platform-overview.json  service-health-alerts.json
deployment/nginx/: nginx.conf
deployment/nginx/html/: index.html
deployment/nginx/static/: style.css
deployment/nginx/templates/: index.html
deployment/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml  recording_rules.yml
docker/api/: Dockerfile  requirements.txt
docker/auth/: Dockerfile  requirements.txt
docker/base/: Dockerfile  requirements.txt
docker/ingestion/: Dockerfile
docker/marts/: Dockerfile
docker/preprocessing/: Dockerfile
docker/training/: Dockerfile  requirements.txt
docs/adr/: 0000-template.md  0001-adopt-adr-process.md  0002-epic-training-implementation-end-to-end.md  000X-add-stochastic-decision-layer-on-top-of-load-forecasting.md  000Y-add-model-ab-testing-layer-for-forecasting-policies.md  000Z-production-level-mlops-hardening-mind-storming.md  README.md
docs/project-delivery/: 01-jira-baseline.md  README.md
docs/project-delivery/examples/: bug-example-api-timezone-mismatch.md  (+2 more)
services/api/: context.py  main.py
services/auth/: context.py
sql/api/: target_view.sql
sql/auth/: user.sql
sql/features/: fct_german_load.sql  load_log.sql
sql/marts/: german_load_api.sql  load_melt.sql
sql/quality/: data_quality_checks.sql  target_overview.sql
sql/staging/: stg_german_load.sql
sql/training/: load_processed_data.sql
(+54 files in other folders)
