[project]
name = "german-load-forecasting-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.135.1",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]


[tool.ruff]
line-length = 120
target-version = "py314"

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
]

lint.ignore = [
    "E501",  # Line too long
]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
]